--- a/login.html
+++ b/login.html
@@ -160,7 +160,7 @@
 				},
 				error: function(xhr, type, errorThrown) {
 					//异常处理
-					mui.toast(this.id + "网络异常");
+					mui.toast("网络异常");
 				}
 			});
 		}
